# PasteParticles

./: .gitignore  README.md  pyproject.toml  requirements.txt
CopyPasteDataGenerator/: config_file.json  config_file_writing.py  create_maskareas_csv.py  main.py
CopyPasteDataGenerator/image_database/masks/: bubble_0.tif  bubble_1.tif  bubble_10.tif  bubble_11.tif  bubble_12.tif  bubble_13.tif  bubble_14.tif  bubble_15.tif  bubble_16.tif  bubble_17.tif  bubble_18.tif  bubble_19.tif  bubble_2.tif  bubble_20.tif  bubble_21.tif  bubble_22.tif  bubble_23.tif  bubble_24.tif  bubble_25.tif  bubble_26.tif  bubble_27.tif  bubble_28.tif  bubble_29.tif  bubble_3.tif  bubble_30.tif  bubble_31.tif  bubble_32.tif  bubble_33.tif  bubble_34.tif  bubble_35.tif  bubble_36.tif  bubble_37.tif  bubble_38.tif  bubble_39.tif  bubble_4.tif  bubble_40.tif  bubble_41.tif  bubble_42.tif  bubble_43.tif  bubble_44.tif  (+616 more)
CopyPasteDataGenerator/image_database/objects/: bubble_0.tif  bubble_1.tif  bubble_10.tif  bubble_11.tif  bubble_12.tif  bubble_13.tif  bubble_14.tif  bubble_15.tif  bubble_16.tif  bubble_17.tif  bubble_18.tif  bubble_19.tif  bubble_2.tif  bubble_20.tif  bubble_21.tif  bubble_22.tif  bubble_23.tif  bubble_24.tif  bubble_25.tif  bubble_26.tif  bubble_27.tif  bubble_28.tif  bubble_29.tif  bubble_3.tif  bubble_31.tif  bubble_33.tif  bubble_34.tif  bubble_35.tif  bubble_36.tif  bubble_37.tif  bubble_38.tif  bubble_39.tif  (+622 more)
CopyPasteDataGenerator/utils/: data_generation.py  data_generation.txt  data_loader.py  data_operations.py  image_creator_class.py  image_operations.py  plotting.py
