[tool.poetry]
name = "copypastedatagenerator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
scikit-image = "^0.22.0"
opencv-rolling-ball = "^1.0.1"
tqdm = "^4.66.2"
imagecodecs = "^2024.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
